Update misc stuff